syntax = "proto3";
package poset.proto;

option java_outer_classname = "PFlagTableWrapper";

message FlagTableWrapper {
  map<string, int64> Body = 1;
}
